p2/confs/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress
  namespace: p2
spec:
  ingressClassName: traefik # this could be removed I think. as traefik is the default ingress used
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-one
            port:
              number: 80
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-two
            port:
              number: 80
  defaultBackend:
    service:
      name: app-three
      port:
        number: 80
